--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "firebase-chat",
   "version": "0.1.0",
+  "description": "Secure chat app",
   "private": true,
+  "author": "demkantor",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
