--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "firebase-chat",
   "version": "0.1.0",
-  "description": "Secure chat app",
+  "description": "Basic chat app",
   "private": true,
   "author": "demkantor",
   "scripts": {
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "firebase": "^7.14.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
